After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 772462 - Crash when opening Preferences when in list mode
Crash when opening Preferences when in list mode
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Crashers
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-10-05 16:42 UTC by Garrett Regier
Modified: 2016-10-05 18:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gdb full backtrace (44.18 KB, text/plain)
2016-10-05 16:42 UTC, Garrett Regier
  Details
list-view: don't crash on view leaks (2.50 KB, patch)
2016-10-05 18:36 UTC, Carlos Soriano
committed Details | Review
canvas-view: don't crash on view leaks (2.00 KB, patch)
2016-10-05 18:36 UTC, Carlos Soriano
committed Details | Review
files-view: plug view leak (742 bytes, patch)
2016-10-05 18:36 UTC, Carlos Soriano
committed Details | Review

Description Garrett Regier 2016-10-05 16:42:12 UTC
Created attachment 336999 [details]
gdb full backtrace

This only happens after you have switched to list mode (switch to icon and then list if needed) and trying to open the preferences.
Comment 1 Ernestas Kulik 2016-10-05 16:43:53 UTC
(In reply to Garrett Regier from comment #0)
> Created attachment 336999 [details]
> gdb full backtrace
> 
> This only happens after you have switched to list mode (switch to icon and
> then list if needed) and trying to open the preferences.

Could you specify the version?
Comment 2 Garrett Regier 2016-10-05 16:44:48 UTC
This is from git master.
Comment 3 Carlos Soriano 2016-10-05 18:36:42 UTC
Created attachment 337001 [details] [review]
list-view: don't crash on view leaks

Although we all love how Nautilus keeps us on the belt crashing when
there is a leak, users are not happy about that.

So let's make nautilus more docile and don't crash in case there is a
view leak. For that, disconnect all signals in the dispose handler
rather than in finalize.
Comment 4 Carlos Soriano 2016-10-05 18:36:48 UTC
Created attachment 337002 [details] [review]
canvas-view: don't crash on view leaks

Similar to previous commit but for the canvas view.

Although we all love how Nautilus keeps us on the belt crashing when
there is a leak, users are not happy about that.

So let's make nautilus more docile and don't crash in case there is a
view leak. For that, disconnect all signals in the dispose handler
rather than in finalize.
Comment 5 Carlos Soriano 2016-10-05 18:36:54 UTC
Created attachment 337003 [details] [review]
files-view: plug view leak
Comment 6 Carlos Soriano 2016-10-05 18:37:21 UTC
Attachment 337001 [details] pushed as 6015ea4 - list-view: don't crash on view leaks
Attachment 337002 [details] pushed as e8fda3a - canvas-view: don't crash on view leaks
Attachment 337003 [details] pushed as 94dae7b - files-view: plug view leak